--- a/player_de_musica/style.css
+++ b/player_de_musica/style.css
@@ -52,6 +52,8 @@ body * {
 
 #player-2 {
     grid-area: B;
+    height: fit-content;
+
 }
 
 #player-3 {
@@ -64,14 +66,27 @@ body * {
     border-radius: 10px;
 }
 
+.player img {
+    width: 84px;
+    height: 84px;
+    object-fit: cover;
+    border-radius: 6px;
+}
+
 .info {
     color: #e1e1e6;
-    display: grid;
     gap: 9.6px;
+}
+
+.info-wrapper {
+    display: flex;
+    gap: 28px;
+    align-items: center;
 }
 
 .player h1 {
     font-size: 24px;
+    margin-bottom: 9.6px;
 }
 
 .info p {
@@ -84,6 +99,10 @@ body * {
     justify-content: space-between;
 
     margin-top: 28px;
+}
+
+.horizontal .controls {
+    padding-inline: 58px;
 }
 
 .track {
@@ -126,4 +145,24 @@ body * {
     justify-content: space-between;
 
     margin-top: 9.6px;
+
+    
+}
+
+
+@media (max-width: 700px) {
+    #app {
+        display: flex;
+        flex-direction: column;
+    
+        max-width: 270px;
+        margin: auto;
+
+        height: auto;
+        padding-block: 60px;
+    }
+
+    .horizontal .controls {
+        padding-inline: 10px;
+    }
 }
